# ansible-manage-lvm

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CHANGELOG.md  README.md  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: settings.yml
.github/workflows/: ci.yml  molecule.yml  release-drafter.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_default.py
molecule/kvm/: converge.yml  molecule.yml  tests
molecule/kvmonlyvg/: converge.yml  molecule.yml
molecule/kvmonlyvg/tests/: test_default.py
molecule/kvmsinglelv/: converge.yml  molecule.yml
molecule/kvmsinglelv/tests/: conftest.py  test_default.py
tasks/: amazon.yml  centos.yml  create_disks.yml  create_fs.yml  create_lv.yml  create_lvm.yml  create_partitions.yml  create_vg.yml  debian.yml  extend_lvm.yml  main.yml  manage_disks.yml  manage_lvm.yml  manage_partitions.yml  managelvm.yml  resize_lvm.yml
templates/: 70-ec2-nvme-devices.rules.j2  ebsnvme-id.j2
tests/: .ansible-lint  test.yml
vars/: main.yml
